@@ -17,19 +17,16 @@
 
 package net.kodehawa.mantarobot.utils;
 
-import lombok.SneakyThrows;
-
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 public class URLEncoding {
-    @SneakyThrows
     public static String decode(String s) {
-        return URLDecoder.decode(s, "UTF-8");
+        return URLDecoder.decode(s, StandardCharsets.UTF_8);
     }
-
-    @SneakyThrows
+    
     public static String encode(String s) {
-        return URLEncoder.encode(s, "UTF-8");
+        return URLEncoder.encode(s, StandardCharsets.UTF_8);
     }
 }
